css/styles.css
/* Color Palette
# - #41431B
# - #AEB784
# - #E3DBBB
# - #F8F3E1
*/

/* Global styles 
------------------------------------*/
html {
    box-sizing: border-box;
}

*, *:before, *:after {
    box-sizing: inherit;
}

body {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    background: #41431B;
    margin: 0;
}

h1{
    font-size: 50px;
    font-family: "Montserrat", sans-serif;
    font-weight: 900;
    margin: 0;
}

h2{
    font-size: 2rem;
    font-family: "Montserrat", sans-serif;
    font-weight: 700;
    margin-top: 0;
    margin: 0;
}

.column-narrow {
    width: 30%;
    float: left;
    padding-right: 3%;
    min-height: 175px;
}

.column-wide {
    width: 70%;
    float: left;
    min-height: 225px;
}

.content-wrap {
    max-width: 950px;
    margin: 0 auto;
    padding: 50px;
}

/* added for weird formatting issue*/
.content-wrap::after {
  content: "";
  display: block;
  clear: both;
}

.contact-info a {
    padding: 10px;
    display: inline-block;
}


/* Header & Footer 
------------------------------------*/
header{
    background: #AEB784;
}

footer {
    background: #AEB784;
    text-align: center;
}

.profile-img {
    border-radius: 50%;
}

/* Work Experience
------------------------------------*/
.work-ex {
    background: #E3DBBB;
}

/* Projects
------------------------------------*/
.projects {
    background: #AEB784;
}

/* Education
------------------------------------*/
.education {
    background: #F8F3E1;
}

/* Tech Skills
------------------------------------*/
.tech-skills {
    background: #E3DBBB;
}

